pi-cluster/deployments/xmas-trees/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: xmas-trees
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: charlieegan3/policing-christmas-trees-frontend:arm-902d487e1e000d174830cf0f570a900c
        ports:
        - name: http1
          containerPort: 80
