pi-cluster/deployments/xmas-trees/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: xmas-trees
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: charlieegan3/policing-christmas-trees-server:arm-902d487e1e000d174830cf0f570a900c
        ports:
        - name: http1
          containerPort: 8081
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
          requests:
            cpu: "10m"
            memory: "10Mi"
