pi-cluster/deployments/xmas-trees/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: xmas-trees
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http1
