pi-cluster/deployments/xmas-trees/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
  namespace: xmas-trees
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http1
