pi-cluster/deployments/xmas-trees/frontend-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: xmas-trees
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - xmas-trees.charlieegan3.co.uk
    secretName: xmas-trees-tls
  rules:
  - host: xmas-trees.charlieegan3.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
